# testing-scenario-todomvc

./: .gitignore  pyproject.toml
testing_scenario_todomvc/helpers/: app.py  app_start.py
tests/: test_main_scenario_todomvc.py  test_main_scenario_todomvc_refactor.py
